language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_for_variant_with_no_fields.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
    ↑            
  Wibble
}


----- AFTER ACTION
import gleam/dynamic/decode

pub type Wibble {
  Wibble
}

fn wibble_decoder() -> decode.Decoder(Wibble) {
  use variant <- decode.then(decode.string)
  case variant {
    "wibble" -> decode.success(Wibble)
    _ -> decode.failure(Wibble, "Wibble")
  }
}
