language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_produces_zero_values_for_user_defined_type_in_the_same_package_2.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport internal/wibble.{type Wibble}\n\npub type Wobble {\n  Wobble(value: Wibble)\n  Dummy(a: Int, b: Int)\n}\n    "
---
----- BEFORE ACTION

import internal/wibble.{type Wibble}

pub type Wobble {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Wobble(value: Wibble)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Dummy(a: Int, b: Int)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑
    


----- AFTER ACTION

import internal/nested_wibble
import gleam/dynamic/decode
import internal/wibble.{type Wibble}

pub type Wobble {
  Wobble(value: Wibble)
  Dummy(a: Int, b: Int)
}

fn wobble_decoder() -> decode.Decoder(Wobble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wobble" -> {
      use value <- decode.field("value", todo as "Decoder for Wibble")
      decode.success(Wobble(value:))
    }
    "dummy" -> {
      use a <- decode.field("a", decode.int)
      use b <- decode.field("b", decode.int)
      decode.success(Dummy(a:, b:))
    }
    _ -> decode.failure(Wobble(value: wibble.Wibble(value: nested_wibble.NestedWibble)), "Wobble")
  }
}
