language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_skips_over_recursive_constructors_when_generating_zero_values.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wobble {\n  Wobble(inside: Wobble)\n  Dummy(a: Int, b: Int)\n}\n    "
---
----- BEFORE ACTION

pub type Wobble {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Wobble(inside: Wobble)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Dummy(a: Int, b: Int)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑
    


----- AFTER ACTION
import gleam/dynamic/decode

pub type Wobble {
  Wobble(inside: Wobble)
  Dummy(a: Int, b: Int)
}

fn wobble_decoder() -> decode.Decoder(Wobble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wobble" -> {
      use inside <- decode.field("inside", wobble_decoder())
      decode.success(Wobble(inside:))
    }
    "dummy" -> {
      use a <- decode.field("a", decode.int)
      use b <- decode.field("b", decode.int)
      decode.success(Dummy(a:, b:))
    }
    _ -> decode.failure(Dummy(a: 0, b: 0), "Wobble")
  }
}
