language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_uses_constructor_with_fewest_fields_for_zero_value.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wobble {\n  Wobble\n  Wibble(some: Int, thing: Int)\n}\n    "
---
----- BEFORE ACTION

pub type Wobble {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Wobble
▔▔▔▔▔▔▔▔
  Wibble(some: Int, thing: Int)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑
    


----- AFTER ACTION
import gleam/dynamic/decode

pub type Wobble {
  Wobble
  Wibble(some: Int, thing: Int)
}

fn wobble_decoder() -> decode.Decoder(Wobble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wobble" -> decode.success(Wobble)
    "wibble" -> {
      use some <- decode.field("some", decode.int)
      use thing <- decode.field("thing", decode.int)
      decode.success(Wibble(some:, thing:))
    }
    _ -> decode.failure(Wobble, "Wobble")
  }
}
